<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pergunta03">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1F1F1"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="60dp"
        android:paddingRight="30dp"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textPerguntaSignificado"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textNumeroPergunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <ImageView
            android:id="@+id/imgPlaca"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/proibido_retorno_esq" />

        <RadioGroup
            android:id="@+id/rgpAlternativas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <RadioButton
                android:id="@+id/rbtAlternativa1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtPlaca9"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbtAlternativa2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtPlaca10"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbtAlternativa3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtPlaca11"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbtAlternativa4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtPlaca12"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="11dp" />
        </RadioGroup>

        <Button
            android:id="@+id/btnResponder"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:onClick="responder"
            android:text="@string/buttonResponder"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>